[package]
name = "rawpsd"
version = "0.1.0"
edition = "2024"
license = "CC0"
authors = ["Wareya"]
description = "Minimal Rust PSD reading library"
repository = "https://github.com/wareya/rawpsd-rs/"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde_support = ["serde"]
debug_spew = []